--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,12 +32,12 @@
             {{ $l := $.Site.GetPage $link }}
             {{ if $l }}
                 {{ $link = $l.Permalink}}
-            {{ end }}
+                {{ end }}
             
             {{ if eq (add $index 1) (len $.Site.Params.Tree.files) }}
-            {{ $leaf = printf "<span id='terminal'>%s└── <a href='%s'>%s</a></span>" $leaf $link $ac | safeHTML}}
+            {{ $leaf = printf "<span id='terminal'>%s└── <a href='%s' target='_blank' style='color: rgb(138, 230, 230);'>%s</a></span>" $leaf $link $ac | safeHTML}}
             {{ else }}
-            {{ $leaf = printf "<span id='terminal'>%s├── <a href='%s'>%s</a></span><br>" $leaf $link $ac | safeHTML}}
+            {{ $leaf = printf "<span id='terminal'>%s├── <a href='%s' target='_blank' style='color: rgb(138, 230, 230)'>%s</a></span><br>" $leaf $link $ac | safeHTML}}
             {{ end }}
         {{ end }}
     {{ end }}
@@ -51,5 +51,6 @@
     {{ $commandDelay := $.Site.Params.Terminal.commandDelay }}
 
     {{ partial "partials/typeIndex.html" (dict "context" . "env" $env "cd" $cd "envWithDir" $envWithDir "cat" $cat "description" $description "tree" $tree "leaf" $leaf "ps1delay" $ps1Delay "stdoutdelay" $stdoutDelay "commanddelay" $commandDelay ) }}
-
-{{ end }}
+    <a href="https://www.asciius.com/" target="_blank" style="color: lightgoldenrodyellow; font-size: 80%; position: fixed; bottom: 8%; left: 50%; transform: translateX(-50%)">Where I Found This Homepage</a>
+    <a href="https://github.com/Yukuro/hugo-theme-shell/" target="_blank" style="color: lightgreen; font-size: 80%; position: fixed; bottom: 5%; left: 50%; transform: translateX(-50%)">Where You Can Use This Yourself</a>
+    {{ end }}
