--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
     {{ $description = printf "<span id='terminal'>%s</span>" $s | safeHTML}}
     {{ else }}
     {{ $limit := sub (len (findRE "\n" .Site.Params.Terminal.description)) 1 }}
-    {{ $description = printf "<span id='terminal' style='color: rgb(170, 200, 250); text-shadow: 0px 0px 10px;'>%s</span>" .Site.Params.Terminal.description }}
+    {{ $description = printf "<span id='terminal' style='color: rgb(170, 200, 250); text-shadow: 0px 0px 10px; line-height: 40px;'>\n%s\n</span>" .Site.Params.Terminal.description }}
     {{ $description = replaceRE "\n" "<br>" $description $limit| safeHTML }}
     {{ end }}
 
@@ -35,9 +35,9 @@
                 {{ end }}
             
             {{ if eq (add $index 1) (len $.Site.Params.Tree.files) }}
-            {{ $leaf = printf "<span id='terminal'>%s└── <a href='%s' target='_blank' style='color: rgb(138, 230, 230);'>%s</a></span>" $leaf $link $ac | safeHTML}}
+            {{ $leaf = printf "<span id='terminal'>%s└── <a href='%s' target='_blank' style='color: rgb(138, 230, 230); line-height: 26px;'>%s</a></span>" $leaf $link $ac | safeHTML}}
             {{ else }}
-            {{ $leaf = printf "<span id='terminal'>%s├── <a href='%s' target='_blank' style='color: rgb(138, 230, 230)'>%s</a></span><br>" $leaf $link $ac | safeHTML}}
+            {{ $leaf = printf "<span id='terminal'>%s├── <a href='%s' target='_blank' style='color: rgb(138, 230, 230); line-height: 26px;'>%s</a></span><br>" $leaf $link $ac | safeHTML}}
             {{ end }}
         {{ end }}
     {{ end }}
